--- a/index.html
+++ b/index.html
@@ -20,84 +20,67 @@
     <header>
       <h1>Romain Priour</h1>
       <p><img src="assets/SNT-Headshots-6545.jpg"></p>
-      <p><a href="https://github.com/rpriour17" target="_blank"><i class="fa fa-github" ,
-            style="font-size:36px"></i></a>
+      <p>
+        <p><a href="assets/Romain.Priour.Resume.pdf" target="_blank"><i class="fa fa-file" ,
+          style="font-size:36px"></i></a>
         <a href="https://www.linkedin.com/in/romainpriour" target="_blank"><i class="fa fa-linkedin" ,
             style="font-size:36px"></i></a>
         <a href="mailto:rpriour17@gmail.com"><i class="fa fa-envelope" , style="font-size:36px"></i></a>
       </p>
-      <p id="Resume"><a href="assets/Romain.Priour.Resume.pdf" target="blank"><b>Resume</b></a></p>
     </header>
     <section>
 
       <p>Hi! My name is Romain Priour, and I am Software Engineer with
-        2+ years of full stack (with an emphasis on backend) experience specializing in Java, Python and Javascript, and
-        a graduate of the UC Berkeley
-        Class of 2022 with a Bachelors in
-        Computer Science. I am a motivated learner who
-        enjoys building and maintaining scalable
-        and robust enterprise applications. My hobbies include playing tennis, working out, snowboarding, and electronic
+        2+ years of Full Stack (with an emphasis on backend) experience specializing in Java, Python and (some) Javascript. I
+        graduated from UC Berkeley
+        in 2022 with a Bachelors in
+        Computer Science. I have found a passion in the challenge of building scalable applications and finding clever
+        solutions to complex software architecture problems. My hobbies include playing tennis, working out, snowboarding, and electronic
         music.
       </p>
 
       <h2>Professional Experience</h2>
-      <h3>Backend Engineer, <a href="https://www.sap.com/index.html" target="_blank">SAP</a> Business Network:
+      <h3>Backend Engineer, <a href="https://www.sap.com/products/business-network.html" target="_blank">SAP Business Network:</a>
         September 2023 - Present</h3>
       <ul>
         <li>
-          Designed and implemented features for a standalone microservice, utilizing asynchronous Kafka messaging to
-          parse, process and route over 2 million documents per hour.
+          Architected and developed features for Spring Boot microservices built to handle over 2 million XML documents per hour.
         </li>
         <li>
-          Conducted technical research for new features by identifying functional requirements, analyzing tradeoffs, and
-          authoring architecture diagrams, which were presented to upper management and over 100 stakeholders.
+          Drove the implementation of a comprehensive testing stack by leveraging the Gatling, Karate, and Cucumber frameworks.
         </li>
         <li>
-          Led the implementation of a comprehensive end-to-end testing stack, including performance testing using
-          Gatling.
+          Engineered a distributed tracing library, enhancing the integration of logs, traces, and metrics for over 10 microservices.
         </li>
         <li>
-          Leveraged company and industry standards to document a standardized logging format and created a distributed
-          tracing library, enhancing the integration of logs, traces and metrics within our microservice ecosystem.
+          Conducted over 20 technical and behavioral interviews for internship and SAP Next Talent positions.
+
         </li>
       </ul>
       <h3>Software Engineer <a href="https://jobs.sap.com/content/SAP-Next-Talent/?locale=en_US" target="_blank">SAP
           Next Talent</a> September 2022 - September 2023 </h3>
-      <h4>Second Rotation: March 2023 - September 2023</h4>
       <ul>
         <li>
-          Led the development of front-end components and Spring APIs for a new feature in the Onboarding module of
-          SuccessFactors, improving the customizability of the platform for thousands of corporate customers.
+          Built and shipped new features for the SuccessFactors Onboarding team, improving customizability for thousands of corporate customers.
         </li>
         <li>
-          Leveraged our in-house automation testing framework to increase test coverage of APIs and UI components to
-          over 85%.
-        </li>
-      </ul>
-      <h4>First Rotation: September 2022 - March 2023</h4>
-      <ul>
-        <li>Developed key features in Kotlin for the launch of an Android application with over 20 corporate customers.
+          Developed 5 screens and end-to-end workflows in Kotlin for the launch of a mobile CRM application with over 20 corporate customers.
         </li>
         <li>
-          Increased test coverage by over 30%, enabling the team to reach the required threshold for release.
+          Engineered a scalable and reusable client-side caching framework, improving the loading efficiency of pages by over 80%.	
         </li>
         <li>
-          Engineered a scalable and reusable client-side caching framework, improving the loading efficiency of various
-          pages by over 80%.
+          Leveraged the JUnit testing framework to increase the test coverage of the application by over 30%, enabling the team to reach the threshold required for release.  
         </li>
       </ul>
       <h3>Mobile Integration Developer Intern, <a href="https://www.sap.com/index.html" target="_blank">SAP</a> : June
         2022 - September 2022 </h3>
       <ul>
         <li>
-          Developed a proof of concept (POC) using SAPUI5 and Odata services for a web platform which enables users to
-          modify their configurations for the various applications within the SAP mobile engineering ecosystem.
+          Developed a proof of concept (POC) using SAPUI5 and OData APIs for a web platform, which enables users to synchronize their configurations for various mobile applications.
         </li>
         <li>
           Utilized Figma to design the UI and process flow of the application.
-        </li>
-        <li>
-          Created over an hour of video content and 25 pages of text documentation to streamline the handover process.
         </li>
       </ul>
       <h3>Full Stack Software Engineer Intern, <a href="https://www.sap.com/index.html" target="_blank">SAP</a> : April
@@ -105,79 +88,58 @@
         September 2021</h3>
       <ul>
         <li>
-          Designed a platform to match new hires to engineering teams, improving process efficiency by over 75% and
-          impacting over 1,000 SAP employees.
+          Designed a platform to match new hires to engineering teams, improving process efficiency by over 75% and impacting over 1,000 SAP employees.
         </li>
         <li>
-          Leveraged SAP Cloud Foundry and hyperscalers to migrate the platform and its database from development to
-          production.
-        </li>
-        <li>
-          Standardized the onboarding and deployment process of the Next Talent matching application by leveraging
-          Docker containers, reducing setup time by over 95%, deployment time by 90%, and significantly reducing the
-          possibility of human error.
+          Optimized the build and deployment process using Docker and Kubernetes, reducing setup and deployment time by over 90%.
+
         </li>
       </ul>
 
       <h3>Software Developer, <a href="https://www.savvydatinggame.com/" target="_blank">Savvy Dating App</a> : April
         2020 - December 2020 </h3>
       <ul>
-        <li>Upgraded the search algorithm to gradually increase the radius by 25 miles if no games are found.
-        </li>
-        <li>Engineered a data analytics dashboard using the Python Flask framework which pulls data from the app’s MySQL
-          database and displays daily active users and demographic data for over 10,000 players.</li>
-        <li>Designed a banning feature in JavaScript to block players that have been reported over 3 times, which has
-          been used to report
-          over 100 players.
-        </li>
+        <li>Engineered a data analytics dashboard using Flask and Javascript, displaying data for over 10,000 players.</li>
+        <li>Designed a banning feature in JavaScript to block players that have been reported over 3 times.</li>
+        <li>Upgraded the search algorithm to gradually increase the search radius if no games are found.</li>
       </ul>
 
       <h2>Skills</h2>
       <ul>
-        <b>Programming Languages:</b> Java (Proficient), Javascript (Proficient), Python (Proficient), Kotlin
-        (Proficient), Go (Familiar)
+        <b>Languages:</b> Java, Python, Javascript, Kotlin, Go, French (Fluent)
       </ul>
       <ul>
-        <b>Technologies:</b> Spring, React, Flask, SQL, PostgreSQL, MongoDB, Docker, Kubernetes, JUnit, Cucumber,
-        Gatling, Karate, Bash, Apache Kafka, Dynatrace, OpenTelemetry
+        <b>Technologies:</b> Docker, Kubernetes, PostgreSQL, MongoDB, Apache Kafka, Temporal, Figma, Cloud Foundry, OpenTelemetry
+      </ul>
+      <ul>
+        <b>Frameworks:</b> Spring Boot, React, Flask, gRPC
       </ul>
 
       <h2>Projects</h2>
       <h3>Web Development, <a href="https://sportsanalytics.berkeley.edu/" target="_blank">Sports Analytics Group,
           Berkeley</a> : January 2020 - December 2020 </h3>
       <ul>
-        <li>Designed and maintained sportsanalytics.berkeley.edu, which involved updating forms and adding new articles
-          to the main page.</li>
+        <li>Re-designed and maintained sportsanalytics.berkeley.edu.</li>
         <li> As part of the Projects Division, utilized a K-Means Clustering algorithm to redefine NBA positions and
           find the most effective
           team composition.</li>
-        <li>Created a Python script to scrape over 10,000 lines of CSV data from basketball-reference.com and conducted
-          principal
-          component analysis to reduce the dimensionality of the data.</li>
+        <li>Created a Python script to scrape over 10,000 lines of CSV data from basketball-reference.com and conducted principal component analysis to reduce the dimensionality of the data.</li>
       </ul>
 
 
       <h3>Gitlet, CS 61B</h3>
       <ul>
-        <li>Implemented a fully working version control system written in Java, similar to Git.</li>
-        <li>This program supported functions like adding, committing, merging branches, and pushing/pulling to remote
+        <li>Implemented a version control system written in Java, similar to Git.</li>
+        <li>This program supported functions like adding and committing files, merging branches, and pushing/pulling to remote
           repositories.</li>
       </ul>
 
 
       <h2>Teaching Experience</h2>
-      <h3>TA: <a href="https://sp21.datastructur.es/" target="_blank">Data Structures and Algorithms (CS 61B), Spring
+      <h3>Teaching Assistant: <a href="https://sp21.datastructur.es/" target="_blank">CS61B: Data Structures, Spring
           2021</a></h3>
-      <h3>TA: <a href="http://fa20.datastructur.es/index.html" target="_blank">Data Structures and Algorithms (CS 61B),
+      <h3>Teaching Assistant: <a href="http://fa20.datastructur.es/index.html" target="_blank">CS61B: Data Structures,
           Fall 2020</a></h3>
-      <ul>
-        <li>Conducted biweekly office hours and taught weekly labs and discussion sections of around 30 students.</li>
-        <li>Proctored and graded exams for a class of over 1600 students.</li>
-        <li>Completed quality assurance tests for exams, lab assignments and discussion worksheets.</li>
-        <li>Upgraded the auto grader’s API queries to our course website for written assignments, boosting grading
-          efficiency by 20%.</li>
-        <li>Resolved student issues with Git repositories and privacy/access rights.</li>
-      </ul>
 
       <h2>Coursework</h2>
 
